[project]
name = "whatsapp_chat"
dynamic = ["version"]
description = "WhatsApp-like chat interface for ERPNext CRM"
requires-python = ">=3.10"
dependencies = ["twilio"]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench.frappe-dependencies]
frappe = ">=16.0.0"
erpnext = ">=16.0.0"
